--- a/arch/arm/mach-tegra/tegra124/Makefile
+++ b/arch/arm/mach-tegra/tegra124/Makefile
@@ -5,11 +5,19 @@
 # SPDX-License-Identifier:     GPL-2.0+
 #
 
+# The AVP is ARMv4T architecture so we must use special compiler
+# flags for any startup files it might use.
+CFLAGS_warmboot_avp.o += -march=armv4t
+
 obj-$(CONFIG_SPL_BUILD) += cpu.o
 
 obj-y	+= clock.o
+obj-$(CONFIG_TEGRA_LP0) += crypto.o
 obj-y	+= funcmux.o
 obj-y	+= pinmux.o
+obj-$(CONFIG_TEGRA_LP0) += t1x4_warmboot.o
+obj-$(CONFIG_TEGRA_LP0) += warmboot.o
+obj-$(CONFIG_TEGRA_LP0) += warmboot_avp.o
 obj-y	+= xusb-padctl.o
 
 ifndef CONFIG_SPL_BUILD
