--- a/arch/arm/mach-tegra/Makefile
+++ b/arch/arm/mach-tegra/Makefile
@@ -20,6 +20,8 @@ obj-y += board.o board2.o
 obj-y += cache.o
 obj-y += clock.o
 obj-y += lowlevel_init.o
+obj-$(CONFIG_NVTBOOT) += nvtboot_ll.o
+obj-$(CONFIG_NVTBOOT) += nvtboot.o
 obj-y += pinmux-common.o
 obj-y += powergate.o
 obj-y += xusb-padctl.o
