ARM: tegra: enable nvtboot support for T210 systems
This enables parsing of the RAM layout information supplied by nvtboot,
which replaces the hard-coded assumptions re: the size of RAM carveouts.

Bug 200051179

Change-Id: Iad7c418fe9aa0afbe13f59ab3e50e11d2fbe80ad
Signed-off-by: Stephen Warren <swarren@nvidia.com>
Reviewed-on: http://git-master/r/789238
GVS: Gerrit_Virtual_Submit
Reviewed-by: Tom Warren <twarren@nvidia.com>

--- a/configs/e2220-1170_defconfig
+++ b/configs/e2220-1170_defconfig
@@ -4,3 +4,4 @@ CONFIG_TEGRA210=y
 CONFIG_TARGET_E2220_1170=y
 CONFIG_DEFAULT_DEVICE_TREE="tegra210-e2220-1170"
 CONFIG_USE_PRIVATE_LIBGCC=n
+CONFIG_NVTBOOT=y
