ARM: tegra: set CONFIG_CMD_NET in defconfig not header
CONFIG_CMD_NET is now a Kconfig option. This means its value must be set
in configs/${board}_defconfig, not in include/configs/${board}.h. Fix the
code to set this variable properly.

Even without doing this, networking mostly worked fine, since setting the
value in the header still affected Makefiles etc. and hence compiled in
networking support. However, it did not trigger any "select" statements
in Kconfig, and hence common/Kconfig did not "select NET". In turn this
meant that ./include/env_callback.h set define NET_CALLBACKS to an empty
value, which in turn caused U-Boot not to "notice" manually set values
for variables such as ipaddr. This resulted in e.g.:

Tegra210 (P2371-2180) # setenv ipaddr 10.24.142.203
Tegra210 (P2371-2180) # ping 10.24.142.226
*** ERROR: `ipaddr' not set
ping failed; host 10.24.142.226 is not alive

However, programatically set values of ipaddr (e.g. via the dhcp command)
worked as expected, since they do not rely on environment variable hooks.

Bug 200137570

Change-Id: I8674a4b10ac3b45f224ab1ad8d51c1db37231c38
Fixes: c2f7cf2ffaa4 ("T210: Add support for 64-bit T210-based P2571 board")
Fixes: 63826023ea0a ("ARM: tegra: Add e2220-1170 board")
Fixes: 5d87742c6194 ("ARM: tegra: Add p2371-0000 board")
Fixes: 5ecc5bcd228f ("ARM: tegra: Add p2371-2180 board")
Signed-off-by: Stephen Warren <swarren@nvidia.com>
Reviewed-on: http://git-master/r/803040
Reviewed-by: Tom Warren <twarren@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/configs/p2371-2180_defconfig
+++ b/configs/p2371-2180_defconfig
@@ -5,3 +5,4 @@ CONFIG_TARGET_P2371_2180=y
 CONFIG_DEFAULT_DEVICE_TREE="tegra210-p2371-2180"
 CONFIG_USE_PRIVATE_LIBGCC=n
 CONFIG_NVTBOOT=y
+CONFIG_CMD_NET=y
