--- a/configs/e2220-1170_defconfig
+++ b/configs/e2220-1170_defconfig
@@ -5,3 +5,4 @@ CONFIG_TARGET_E2220_1170=y
 CONFIG_DEFAULT_DEVICE_TREE="tegra210-e2220-1170"
 CONFIG_USE_PRIVATE_LIBGCC=n
 CONFIG_NVTBOOT=y
+CONFIG_CMD_NET=y
