--- a/configs/p2371-0000_defconfig
+++ b/configs/p2371-0000_defconfig
@@ -5,3 +5,4 @@ CONFIG_TARGET_P2371_0000=y
 CONFIG_DEFAULT_DEVICE_TREE="tegra210-p2371-0000"
 CONFIG_USE_PRIVATE_LIBGCC=n
 CONFIG_NVTBOOT=y
+CONFIG_CMD_NET=y
