--- a/arch/arm/dts/tegra210-p2371-2180.dts
+++ b/arch/arm/dts/tegra210-p2371-2180.dts
@@ -12,6 +12,7 @@
 
 	aliases {
 		i2c0 = "/i2c@0,7000d000";
+		i2c3 = "/i2c@0,7000c500";
 		sdhci0 = "/sdhci@0,700b0600";
 		sdhci1 = "/sdhci@0,700b0000";
 		usb0 = "/usb@0,7d000000";
@@ -32,6 +33,11 @@
 	sdhci@0,700b0600 {
 		status = "okay";
 		bus-width = <8>;
+	};
+
+	i2c@0,7000c500 {
+		status = "okay";
+		clock-frequency = <400000>;
 	};
 
 	i2c@0,7000d000 {
