ARM: tegra: rename dummy XUSB padctl implementation
A future patch will soon move some of the XUSB padctl code into a common
file in arch/arm/mach-tegra. Rename the existing dummy XUSB padctl file
to avoid conflicting with that, or being confusing.

Bug 200141031

Change-Id: Ia67a532ebaf5b01c6dc9fc3281f7b758d1f0614a
Signed-off-by: Stephen Warren <swarren@nvidia.com>
(cherry-picked from upstream mailing list)
Reviewed-on: http://git-master/r/815319
GVS: Gerrit_Virtual_Submit
Reviewed-by: Tom Warren <twarren@nvidia.com>

--- a/arch/arm/mach-tegra/Makefile
+++ b/arch/arm/mach-tegra/Makefile
@@ -25,7 +25,7 @@ obj-$(CONFIG_NVTBOOT) += nvtboot_ll.o
 obj-$(CONFIG_NVTBOOT) += nvtboot.o
 obj-y += pinmux-common.o
 obj-y += powergate.o
-obj-y += xusb-padctl.o
+obj-y += xusb-padctl-dummy.o
 obj-$(CONFIG_DISPLAY_CPUINFO) += sys_info.o
 #TCW Fix this to use a common config switch (CONFIG_LOCK_VPR?)
 obj-$(CONFIG_TEGRA124) += vpr.o
