dts: add M.2 slot to jetson-tx2 device tree
to have the shdci (mmc) device numbers match the
kernel's.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/arch/arm/dts/tegra186-p2771-0000.dtsi
+++ b/arch/arm/dts/tegra186-p2771-0000.dtsi
@@ -10,7 +10,8 @@
 
 	aliases {
 		sdhci0 = "/sdhci@3460000";
-		sdhci1 = "/sdhci@3400000";
+		sdhci1 = "/sdhci@3440000";
+		sdhci2 = "/sdhci@3400000";
 		i2c0 = "/bpmp/i2c";
 		i2c1 = "/i2c@3160000";
 		i2c2 = "/i2c@c240000";
@@ -49,6 +50,11 @@
 	sdhci@3400000 {
 		status = "okay";
 		wp-gpios = <&gpio_main TEGRA_MAIN_GPIO(P, 4) GPIO_ACTIVE_HIGH>;
+		bus-width = <4>;
+	};
+
+	sdhci@3440000 {
+		status = "okay";
 		bus-width = <4>;
 	};
 
