--- a/arch/arm/dts/tegra210-p2371-2180.dts
+++ b/arch/arm/dts/tegra210-p2371-2180.dts
@@ -16,7 +16,8 @@
 		i2c3 = "/i2c@0,7000c500";
 		i2c5 = "/i2c@0,546c0c00";
 		sdhci0 = "/sdhci@0,700b0600";
-		sdhci1 = "/sdhci@0,700b0000";
+		sdhci1 = "/sdhci@0,700b0200";
+		sdhci2 = "/sdhci@0,700b0000";
 		usb0 = "/usb@0,7d000000";
 	};
 
@@ -84,6 +85,11 @@
 		cd-gpios = <&gpio TEGRA_GPIO(Z, 1) GPIO_ACTIVE_LOW>;
 		power-gpios = <&gpio TEGRA_GPIO(Z, 3) GPIO_ACTIVE_HIGH>;
 		wp-gpios = <&gpio TEGRA_GPIO(Z, 4) GPIO_ACTIVE_LOW>;
+		bus-width = <4>;
+	};
+
+	sdhci@0,700b0200 {
+		status = "okay";
 		bus-width = <4>;
 	};
 
