--- a/configs/p2371-2180_defconfig
+++ b/configs/p2371-2180_defconfig
@@ -42,3 +42,4 @@ CONFIG_USB_GADGET_DOWNLOAD=y
 CONFIG_G_DNL_MANUFACTURER="NVIDIA"
 CONFIG_G_DNL_VENDOR_NUM=0x0955
 CONFIG_G_DNL_PRODUCT_NUM=0x701a
+CONFIG_BOOTP_PREFER_SERVERIP=y
